[package]
name = "solar-sim"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
specs = { version = "0.19", default-features = false, features = ["derive"] }
cfg-if = "1"
bytemuck = { version = "1.12", features = [ "derive" ] }
cgmath = "0.18"
env_logger = "0.10"
pollster = "0.3"
log = "0.4"
wgpu = "0.17"
winit = "0.28"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
wgpu = { version = "0.17", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-timer = "0.2"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
